# qtqml-dashboard-car

./: CMakeLists.txt  README.md  main.cpp
resources/qml/: main.qml
resources/qml/components/common/: ImageTextButton.qml  TextButton.qml
resources/qml/components/control/: Control.qml
resources/qml/components/header/: Header.qml
resources/qrc/: images.qrc  qml.qrc
resources/qrc/components/: common.qrc
